src/mycalcppc/y.output
   0  $accept : statement $end

   1  statement : exitstmt
   2            | binary eol
   3            | binary eol exitstmt

   4  exitstmt : EXIT EOL

   5  binary : number
   6         | lp binary rp
   7         | binary PLUS binary
   8         | binary MINUS binary
   9         | binary STAR binary
  10         | binary SLASH binary
  11         | binary PERCENT binary
  12         | binary OR binary
  13         | binary AND binary
  14         | binary XOR binary
  15         | binary LSHIFT binary
  16         | binary RSHIFT binary

  17  eol :
  18      | EOL

  19  number : integer

  20  integer : NUMBER
  21          | HEXSTRING
  22          | BITINVERT NUMBER
  23          | BITINVERT HEXSTRING
  24          | MINUS NUMBER
  25          | MINUS HEXSTRING

  26  lp : LPAREN

  27  rp : RPAREN

state 0
	$accept : . statement $end  (0)

	NUMBER  shift 1
	HEXSTRING  shift 2
	EXIT  shift 3
	MINUS  shift 4
	LPAREN  shift 5
	BITINVERT  shift 6
	.  error

	statement  goto 7
	integer  goto 8
	number  goto 9
	binary  goto 10
	exitstmt  goto 11
	lp  goto 12


state 1
	integer : NUMBER .  (20)

	.  reduce 20


state 2
	integer : HEXSTRING .  (21)

	.  reduce 21


state 3
	exitstmt : EXIT . EOL  (4)

	EOL  shift 13
	.  error


state 4
	integer : MINUS . NUMBER  (24)
	integer : MINUS . HEXSTRING  (25)

	NUMBER  shift 14
	HEXSTRING  shift 15
	.  error


state 5
	lp : LPAREN .  (26)

	.  reduce 26


state 6
	integer : BITINVERT . NUMBER  (22)
	integer : BITINVERT . HEXSTRING  (23)

	NUMBER  shift 16
	HEXSTRING  shift 17
	.  error


state 7
	$accept : statement . $end  (0)

	$end  accept


state 8
	number : integer .  (19)

	.  reduce 19


state 9
	binary : number .  (5)

	.  reduce 5


state 10
	statement : binary . eol  (2)
	statement : binary . eol exitstmt  (3)
	binary : binary . PLUS binary  (7)
	binary : binary . MINUS binary  (8)
	binary : binary . STAR binary  (9)
	binary : binary . SLASH binary  (10)
	binary : binary . PERCENT binary  (11)
	binary : binary . OR binary  (12)
	binary : binary . AND binary  (13)
	binary : binary . XOR binary  (14)
	binary : binary . LSHIFT binary  (15)
	binary : binary . RSHIFT binary  (16)
	eol : .  (17)

	OR  shift 18
	AND  shift 19
	EOL  shift 20
	PLUS  shift 21
	MINUS  shift 22
	STAR  shift 23
	SLASH  shift 24
	PERCENT  shift 25
	XOR  shift 26
	LSHIFT  shift 27
	RSHIFT  shift 28
	$end  reduce 17
	EXIT  reduce 17

	eol  goto 29


state 11
	statement : exitstmt .  (1)

	.  reduce 1


state 12
	binary : lp . binary rp  (6)

	NUMBER  shift 1
	HEXSTRING  shift 2
	MINUS  shift 4
	LPAREN  shift 5
	BITINVERT  shift 6
	.  error

	integer  goto 8
	number  goto 9
	binary  goto 30
	lp  goto 12


state 13
	exitstmt : EXIT EOL .  (4)

	.  reduce 4


state 14
	integer : MINUS NUMBER .  (24)

	.  reduce 24


state 15
	integer : MINUS HEXSTRING .  (25)

	.  reduce 25


state 16
	integer : BITINVERT NUMBER .  (22)

	.  reduce 22


state 17
	integer : BITINVERT HEXSTRING .  (23)

	.  reduce 23


state 18
	binary : binary OR . binary  (12)

	NUMBER  shift 1
	HEXSTRING  shift 2
	MINUS  shift 4
	LPAREN  shift 5
	BITINVERT  shift 6
	.  error

	integer  goto 8
	number  goto 9
	binary  goto 31
	lp  goto 12


state 19
	binary : binary AND . binary  (13)

	NUMBER  shift 1
	HEXSTRING  shift 2
	MINUS  shift 4
	LPAREN  shift 5
	BITINVERT  shift 6
	.  error

	integer  goto 8
	number  goto 9
	binary  goto 32
	lp  goto 12


state 20
	eol : EOL .  (18)

	.  reduce 18


state 21
	binary : binary PLUS . binary  (7)

	NUMBER  shift 1
	HEXSTRING  shift 2
	MINUS  shift 4
	LPAREN  shift 5
	BITINVERT  shift 6
	.  error

	integer  goto 8
	number  goto 9
	binary  goto 33
	lp  goto 12


state 22
	binary : binary MINUS . binary  (8)

	NUMBER  shift 1
	HEXSTRING  shift 2
	MINUS  shift 4
	LPAREN  shift 5
	BITINVERT  shift 6
	.  error

	integer  goto 8
	number  goto 9
	binary  goto 34
	lp  goto 12


state 23
	binary : binary STAR . binary  (9)

	NUMBER  shift 1
	HEXSTRING  shift 2
	MINUS  shift 4
	LPAREN  shift 5
	BITINVERT  shift 6
	.  error

	integer  goto 8
	number  goto 9
	binary  goto 35
	lp  goto 12


state 24
	binary : binary SLASH . binary  (10)

	NUMBER  shift 1
	HEXSTRING  shift 2
	MINUS  shift 4
	LPAREN  shift 5
	BITINVERT  shift 6
	.  error

	integer  goto 8
	number  goto 9
	binary  goto 36
	lp  goto 12


state 25
	binary : binary PERCENT . binary  (11)

	NUMBER  shift 1
	HEXSTRING  shift 2
	MINUS  shift 4
	LPAREN  shift 5
	BITINVERT  shift 6
	.  error

	integer  goto 8
	number  goto 9
	binary  goto 37
	lp  goto 12


state 26
	binary : binary XOR . binary  (14)

	NUMBER  shift 1
	HEXSTRING  shift 2
	MINUS  shift 4
	LPAREN  shift 5
	BITINVERT  shift 6
	.  error

	integer  goto 8
	number  goto 9
	binary  goto 38
	lp  goto 12


state 27
	binary : binary LSHIFT . binary  (15)

	NUMBER  shift 1
	HEXSTRING  shift 2
	MINUS  shift 4
	LPAREN  shift 5
	BITINVERT  shift 6
	.  error

	integer  goto 8
	number  goto 9
	binary  goto 39
	lp  goto 12


state 28
	binary : binary RSHIFT . binary  (16)

	NUMBER  shift 1
	HEXSTRING  shift 2
	MINUS  shift 4
	LPAREN  shift 5
	BITINVERT  shift 6
	.  error

	integer  goto 8
	number  goto 9
	binary  goto 40
	lp  goto 12


state 29
	statement : binary eol .  (2)
	statement : binary eol . exitstmt  (3)

	EXIT  shift 3
	$end  reduce 2

	exitstmt  goto 41


state 30
	binary : lp binary . rp  (6)
	binary : binary . PLUS binary  (7)
	binary : binary . MINUS binary  (8)
	binary : binary . STAR binary  (9)
	binary : binary . SLASH binary  (10)
	binary : binary . PERCENT binary  (11)
	binary : binary . OR binary  (12)
	binary : binary . AND binary  (13)
	binary : binary . XOR binary  (14)
	binary : binary . LSHIFT binary  (15)
	binary : binary . RSHIFT binary  (16)

	OR  shift 18
	AND  shift 19
	PLUS  shift 21
	MINUS  shift 22
	STAR  shift 23
	SLASH  shift 24
	PERCENT  shift 25
	RPAREN  shift 42
	XOR  shift 26
	LSHIFT  shift 27
	RSHIFT  shift 28
	.  error

	rp  goto 43


state 31
	binary : binary . PLUS binary  (7)
	binary : binary . MINUS binary  (8)
	binary : binary . STAR binary  (9)
	binary : binary . SLASH binary  (10)
	binary : binary . PERCENT binary  (11)
	binary : binary . OR binary  (12)
	binary : binary OR binary .  (12)
	binary : binary . AND binary  (13)
	binary : binary . XOR binary  (14)
	binary : binary . LSHIFT binary  (15)
	binary : binary . RSHIFT binary  (16)

	AND  shift 19
	PLUS  shift 21
	MINUS  shift 22
	STAR  shift 23
	SLASH  shift 24
	PERCENT  shift 25
	XOR  shift 26
	LSHIFT  shift 27
	RSHIFT  shift 28
	$end  reduce 12
	EXIT  reduce 12
	OR  reduce 12
	EOL  reduce 12
	RPAREN  reduce 12


state 32
	binary : binary . PLUS binary  (7)
	binary : binary . MINUS binary  (8)
	binary : binary . STAR binary  (9)
	binary : binary . SLASH binary  (10)
	binary : binary . PERCENT binary  (11)
	binary : binary . OR binary  (12)
	binary : binary . AND binary  (13)
	binary : binary AND binary .  (13)
	binary : binary . XOR binary  (14)
	binary : binary . LSHIFT binary  (15)
	binary : binary . RSHIFT binary  (16)

	PLUS  shift 21
	MINUS  shift 22
	STAR  shift 23
	SLASH  shift 24
	PERCENT  shift 25
	LSHIFT  shift 27
	RSHIFT  shift 28
	$end  reduce 13
	EXIT  reduce 13
	OR  reduce 13
	AND  reduce 13
	EOL  reduce 13
	RPAREN  reduce 13
	XOR  reduce 13


state 33
	binary : binary . PLUS binary  (7)
	binary : binary PLUS binary .  (7)
	binary : binary . MINUS binary  (8)
	binary : binary . STAR binary  (9)
	binary : binary . SLASH binary  (10)
	binary : binary . PERCENT binary  (11)
	binary : binary . OR binary  (12)
	binary : binary . AND binary  (13)
	binary : binary . XOR binary  (14)
	binary : binary . LSHIFT binary  (15)
	binary : binary . RSHIFT binary  (16)

	STAR  shift 23
	SLASH  shift 24
	PERCENT  shift 25
	$end  reduce 7
	EXIT  reduce 7
	OR  reduce 7
	AND  reduce 7
	EOL  reduce 7
	PLUS  reduce 7
	MINUS  reduce 7
	RPAREN  reduce 7
	XOR  reduce 7
	LSHIFT  reduce 7
	RSHIFT  reduce 7


state 34
	binary : binary . PLUS binary  (7)
	binary : binary . MINUS binary  (8)
	binary : binary MINUS binary .  (8)
	binary : binary . STAR binary  (9)
	binary : binary . SLASH binary  (10)
	binary : binary . PERCENT binary  (11)
	binary : binary . OR binary  (12)
	binary : binary . AND binary  (13)
	binary : binary . XOR binary  (14)
	binary : binary . LSHIFT binary  (15)
	binary : binary . RSHIFT binary  (16)

	STAR  shift 23
	SLASH  shift 24
	PERCENT  shift 25
	$end  reduce 8
	EXIT  reduce 8
	OR  reduce 8
	AND  reduce 8
	EOL  reduce 8
	PLUS  reduce 8
	MINUS  reduce 8
	RPAREN  reduce 8
	XOR  reduce 8
	LSHIFT  reduce 8
	RSHIFT  reduce 8


state 35
	binary : binary . PLUS binary  (7)
	binary : binary . MINUS binary  (8)
	binary : binary . STAR binary  (9)
	binary : binary STAR binary .  (9)
	binary : binary . SLASH binary  (10)
	binary : binary . PERCENT binary  (11)
	binary : binary . OR binary  (12)
	binary : binary . AND binary  (13)
	binary : binary . XOR binary  (14)
	binary : binary . LSHIFT binary  (15)
	binary : binary . RSHIFT binary  (16)

	.  reduce 9


state 36
	binary : binary . PLUS binary  (7)
	binary : binary . MINUS binary  (8)
	binary : binary . STAR binary  (9)
	binary : binary . SLASH binary  (10)
	binary : binary SLASH binary .  (10)
	binary : binary . PERCENT binary  (11)
	binary : binary . OR binary  (12)
	binary : binary . AND binary  (13)
	binary : binary . XOR binary  (14)
	binary : binary . LSHIFT binary  (15)
	binary : binary . RSHIFT binary  (16)

	.  reduce 10


state 37
	binary : binary . PLUS binary  (7)
	binary : binary . MINUS binary  (8)
	binary : binary . STAR binary  (9)
	binary : binary . SLASH binary  (10)
	binary : binary . PERCENT binary  (11)
	binary : binary PERCENT binary .  (11)
	binary : binary . OR binary  (12)
	binary : binary . AND binary  (13)
	binary : binary . XOR binary  (14)
	binary : binary . LSHIFT binary  (15)
	binary : binary . RSHIFT binary  (16)

	.  reduce 11


state 38
	binary : binary . PLUS binary  (7)
	binary : binary . MINUS binary  (8)
	binary : binary . STAR binary  (9)
	binary : binary . SLASH binary  (10)
	binary : binary . PERCENT binary  (11)
	binary : binary . OR binary  (12)
	binary : binary . AND binary  (13)
	binary : binary . XOR binary  (14)
	binary : binary XOR binary .  (14)
	binary : binary . LSHIFT binary  (15)
	binary : binary . RSHIFT binary  (16)

	AND  shift 19
	PLUS  shift 21
	MINUS  shift 22
	STAR  shift 23
	SLASH  shift 24
	PERCENT  shift 25
	LSHIFT  shift 27
	RSHIFT  shift 28
	$end  reduce 14
	EXIT  reduce 14
	OR  reduce 14
	EOL  reduce 14
	RPAREN  reduce 14
	XOR  reduce 14


state 39
	binary : binary . PLUS binary  (7)
	binary : binary . MINUS binary  (8)
	binary : binary . STAR binary  (9)
	binary : binary . SLASH binary  (10)
	binary : binary . PERCENT binary  (11)
	binary : binary . OR binary  (12)
	binary : binary . AND binary  (13)
	binary : binary . XOR binary  (14)
	binary : binary . LSHIFT binary  (15)
	binary : binary LSHIFT binary .  (15)
	binary : binary . RSHIFT binary  (16)

	PLUS  shift 21
	MINUS  shift 22
	STAR  shift 23
	SLASH  shift 24
	PERCENT  shift 25
	$end  reduce 15
	EXIT  reduce 15
	OR  reduce 15
	AND  reduce 15
	EOL  reduce 15
	RPAREN  reduce 15
	XOR  reduce 15
	LSHIFT  reduce 15
	RSHIFT  reduce 15


state 40
	binary : binary . PLUS binary  (7)
	binary : binary . MINUS binary  (8)
	binary : binary . STAR binary  (9)
	binary : binary . SLASH binary  (10)
	binary : binary . PERCENT binary  (11)
	binary : binary . OR binary  (12)
	binary : binary . AND binary  (13)
	binary : binary . XOR binary  (14)
	binary : binary . LSHIFT binary  (15)
	binary : binary . RSHIFT binary  (16)
	binary : binary RSHIFT binary .  (16)

	PLUS  shift 21
	MINUS  shift 22
	STAR  shift 23
	SLASH  shift 24
	PERCENT  shift 25
	$end  reduce 16
	EXIT  reduce 16
	OR  reduce 16
	AND  reduce 16
	EOL  reduce 16
	RPAREN  reduce 16
	XOR  reduce 16
	LSHIFT  reduce 16
	RSHIFT  reduce 16


state 41
	statement : binary eol exitstmt .  (3)

	.  reduce 3


state 42
	rp : RPAREN .  (27)

	.  reduce 27


state 43
	binary : lp binary rp .  (6)

	.  reduce 6


22 terminals, 9 nonterminals
28 grammar rules, 44 states
